--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,6 @@
-/* App.css
 
-.app-container {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+
+  .footer{
+    display: block;
   }
-  
-  .content {
-    flex: 1;
-  } */
   
