--- a/src/components/cardList/CardList.css
+++ b/src/components/cardList/CardList.css
@@ -4,3 +4,10 @@
     text-align: center;
     float: left;
 }
+
+.text{
+    width: 100%;
+    background-color: aliceblue;
+    text-align: center;
+    justify-content: center;
+}
