--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -1,6 +1,6 @@
 .custom-carousel {
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    /* border-radius: 10px; */
     overflow: hidden;
     background: linear-gradient(45deg, #ff9a9e, #fad0c4);
     margin: 20px auto;
@@ -10,7 +10,7 @@
 .custom-image {
     width: 100%;
     height: 100%;
-    border-radius: 1px;
+    /* border-radius: 1px; */
     transition: transform 0.5s ease;
 }
 
@@ -23,7 +23,7 @@
     height: 12px;
     border-radius: 50%;
     background-color: #fff;
-    border: 2px solid #000;
+    /* border: 2px solid #000; */
     transition: background-color 0.3s ease;
 }
 
@@ -32,18 +32,15 @@
 }
 
 .custom-control {
-    background-color: rgba(247, 243, 243, 0.5);
-    border-radius: 10%;
+    
     padding: 5px;
     transition: background-color 0.3s ease;
 }
 
-.custom-control:hover {
-    background-color: rgba(0, 0, 0, 0.7);
-}
+
 
 .custom-control-icon {
-    font-size: 20px;
+    font-size: 50px;
     color: #fff;
 }
 
@@ -78,3 +75,7 @@
     text-align: center;
   }
   
+#demo{
+    max-width: none;
+    margin: 0;
+}
