--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,23 +1,20 @@
-/* Footer.css */
 
 .footer {
     background-color: #333;
     color: #fff;
-    /* padding: 20px; */
-    /* text-align: center; */
-    /* position: absolute; */
-    /* left: 0; */
-    /* bottom: 0; */
+    padding: 20px;
+    text-align: center;
+    
     width: 100%;
     height: 100%;
-    /* z-index: 1000; */
+   
     
   }
   
   .footer-content {
-    /* display: flex; */
-    /* justify-content: space-around; */
-    /* flex-wrap: wrap; */
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin-bottom: 20px;
   }
   
