--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -1,6 +1,5 @@
 .custom-carousel {
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
-    /* border-radius: 10px; */
     overflow: hidden;
     background: linear-gradient(45deg, #ff9a9e, #fad0c4);
     margin: 20px auto;
@@ -10,7 +9,6 @@
 .custom-image {
     width: 100%;
     height: 100%;
-    /* border-radius: 1px; */
     transition: transform 0.5s ease;
 }
 
@@ -23,7 +21,6 @@
     height: 12px;
     border-radius: 50%;
     background-color: #fff;
-    /* border: 2px solid #000; */
     transition: background-color 0.3s ease;
 }
 
@@ -54,7 +51,6 @@
 .image-container {
     position: relative;
     width: 100%;
-    /* max-width: 400px; Настройте по своему усмотрению */
   }
   
   .image-container img {
@@ -64,13 +60,13 @@
   
   .text-overlay {
     position: absolute;
-    top: 5%; /* Положение текста сверху */
-    left: 50%; /* Положение текста слева */
-    transform: translate(-50%, -50%); /* Центрирование текста */
-    color: white; /* Цвет текста */
-    background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон под текстом */
+    top: 5%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5); 
     padding: 10px;
-    border-radius: 5px; /* Закругленные углы */
+    border-radius: 5px; 
     font-size: 16px;
     text-align: center;
   }
