--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -19,11 +19,12 @@ li a {
     color: red;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 li a:hover {
-    background-color: #111;
+    background-color: wheat;
 }
 
 a {
@@ -32,10 +33,7 @@ a {
     display: block;
 }
 
-a:hover {
-    background-color: #ddd;
-    color: black;
-}
+
 
 .navbar{
     width: 100%;
@@ -45,5 +43,11 @@ a:hover {
     justify-content: space-between;
     align-items: center;
     background-color: gold;
-    padding: 0px 50px;
+    padding: 5px 50px;
+    
+}
+
+.active{
+    font-weight: bold;
+    color: black;
 }
