add new data to db

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -2,11 +2,11 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     width: 300px;
-    margin: 16px;
-    padding-bottom: 5px;
+    margin: 30px;
+    padding-bottom: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-  
+
 }
 
 .card:hover {
@@ -35,15 +35,30 @@
     color: #555;
 }
 
-.like{
-    background-color: gold;
-    text-align: center;
-    cursor: pointer;
-    color: #000;
-}
 
-.card{
+.card {
     float: left;
     width: 300px;
-    height: 400px;
+    height: 430px;
+}
+
+
+
+.red {
+    color: red;
+
+}
+
+.button {
+
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    font-size: 24px;
+    line-height: 1;
+    display: inline-flex;
+    align-items: center;
+
+
 }
