--- a/src/components/cardList/CardList.css
+++ b/src/components/cardList/CardList.css
@@ -1,15 +1,23 @@
-.cards-list{
-    width: 400px;
-    height: 400px;
-    text-align: center;
-    float: left;
-   
-}
-
-.text{
+.cards-list {
     width: 100%;
-    background-color: aliceblue;
     text-align: center;
-    justify-content: center;
+    padding: 20px; /* Добавил отступы по краям */
 }
 
+.text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: gold;
+    font-size: 35px;
+    font-weight: bold;
+    margin: 20px 0; /* Установил вертикальные отступы */
+    text-transform: uppercase;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Центрирует карточки по горизонтали */
+    gap: 20px; /* Добавляет отступы между карточками */
+}
